--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,14 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //TODO for bottom bar
+    implementation 'nl.joery.animatedbottombar:library:1.1.0'
+
+    //TODO for multi size
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 }
