--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,15 @@ dependencies {
     //TODO for multi size
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+
+
+    //TODO retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
+
+    //TODO glide for load image from web
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
